src/objects/Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract/Order</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Ledgers</relationshipLabel>
        <relationshipName>Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>